--- a/client/static/style.css
+++ b/client/static/style.css
@@ -1,13 +1,19 @@
 .container {
     display: grid;
-    grid-gap: .25rem;
-    grid-template-columns: repeat(auto-fill, minmax(calc(3/4 * 5rem), 1fr) ) ;
-    min-height: 5rem;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(calc(3/4 * min(25vw, 100px)), 1fr) ) ;
+    min-height: min(25vw, 100px);
     border: solid black 1px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
     align-items: center;
     justify-items: center;
+    margin-bottom: 10px;
+}
+
+p {
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 .container.invalid {
@@ -15,7 +21,7 @@
 }
 
 .card {
-    height: 5rem;
+    height: min(25vw, 100px);
 }
 
 .drag-card:hover {
